--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,41 @@
 version: '3.8'
 
 services:
+  mysql:
+    image: mysql:latest
+    ports:
+      - "3306:3306"
+    environment:
+      - MYSQL_ROOT_PASSWORD=12042003
+      - MYSQL_DATABASE=hardware_ecommerce
+    healthcheck:
+      test: ["CMD-SHELL", "mysqladmin ping -h mysql -u root --password=12042003"]
+      interval: 30s
+      timeout: 10s
+      retries: 10
   backend:
     build: 
       context: ./Course-work-Back-end
       dockerfile: Dockerfile
     ports:
-      - "9090:9090"  # Перенаправление порта контейнера на порт хоста
+      - "9090:9090"
     environment:
       - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/hardware_ecommerce
       - SPRING_DATASOURCE_USERNAME=root
       - SPRING_DATASOURCE_PASSWORD=12042003
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
 
   frontend:
     build: 
       context: ./Course-work-FRONT-end
       dockerfile: Dockerfile
     ports:
-      - "4200:4200"  # Перенаправление порта контейнера на порт хоста
-    environment:
-      - NODE_ENV=production
+      - "4200:4200"
     depends_on:
       - backend
 
-  mysql:
-    image: mysql:latest
-    ports:
-      - "3306:3306"  # Перенаправление порта контейнера на порт хоста
-    environment:
-      - MYSQL_ROOT_PASSWORD=12042003
-      - MYSQL_DATABASE=hardware_ecommerce
+networks:
+  default:
+    driver: bridge
